<?xml version="1.0"?>
<package format="2">
  <name>rubis_pkg</name>
  <version>0.0.0</version>
  <description>Additional Package by HJW</description>
  
  <maintainer email="jwhan@todo.todo">jwhan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
<build_depend>rospy</build_depend>
<build_depend>python-lgsvl</build_depend>
<build_depend>python-os</build_depend>
<build_depend>python-time</build_depend>
<build_depend>python-json</build_depend>
<build_depend>python-threading</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>autoware_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>jsk_recognition_msgs</build_depend>
<build_depend>rubis_msgs</build_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>python-lgsvl</build_export_depend>
<build_export_depend>python-os</build_export_depend>
<build_export_depend>python-time</build_export_depend>
<build_export_depend>python-json</build_export_depend>
<build_export_depend>python-threading</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>autoware_msgs</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>jsk_recognition_msgs</build_export_depend>
<build_export_depend>rubis_msgs</build_export_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>python-lgsvl</exec_depend>
<exec_depend>python-os</exec_depend>
<exec_depend>python-time</exec_depend>
<exec_depend>python-json</exec_depend>
<exec_depend>python-threading</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nmea_msgs</exec_depend>
<exec_depend>autoware_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>jsk_recognition_msgs</exec_depend>
<exec_depend>rubis_msgs</exec_depend>
</package>