<?xml version="1.0"?>
<package format="2">
  <name>sensing_utils</name>
  <version>0.0.0</version>
  <description>The sensing_utils package</description>

  <maintainer email="hypark@todo.todo">hypark</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>inertiallabs_msgs</depend>
  <depend>roscpp</depend>
</package>
