<?xml version="1.0"?>
<package format="2">
  <name>vision_workloads</name>
  <version>0.0.0</version>
  <description>Vision workloads</description>
  
  <maintainer email="kite9240@gmail.com">Hayeon Park</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
  <build_depend>rospy</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>rubis_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>rubis_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>rubis_msgs</exec_depend>
  <depend>roscpp</depend>
  <depend>rubis_lib</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
</package>